[UPT] Fix page height when processes overflow screen height.

--- a/process_scheduler/src/components/App.css
+++ b/process_scheduler/src/components/App.css
@@ -2,7 +2,7 @@
   background: #14114e;
   display: flex;
   max-width: 99vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 5%;
 }
 
